data/test/type_check/fail/issue_20d.v
wire x[3:0];
// Too few array subscript
assign x = 1;
